# finangen-analysis-plugin

./: Cargo.toml  README.md
src/: analysers.rs  configs.rs  lib.rs  models.rs
